Diseño de la aplicación con css y responsive design junto con la funcionalidad de encriptar un texto

--- a/index.html
+++ b/index.html
@@ -11,24 +11,17 @@
 <body>
     <div class="container">
         <div class="encriptar">
-            <textarea 
-            name="texto" 
-            class="texto" 
-            id="texto" 
-            cols="30" 
-            rows="10" 
-            placeholder="Escribe tu mensaje aquí">
+            <textarea name="texto"class="texto"id="texto"cols="30"rows="10" placeholder="Escribe tu mensaje aquí">
             </textarea>
         </div>
-    
     <div class="botones">
         <button class="botonencriptar" type="button" onclick="encriptar()">Encriptar</button>
         <input type="button" class="botondesencriptar" value="Desencriptar" onclick="desencriptar()">
     </div>
     <div class="encriptado">
-        <img src="" alt="" id="muñeco">
+        <img src="imagenes/Muñeco.png" alt="" id="muñeco">
         <div class="mensajeencriptado" id="mensajeencriptado">
-            <h2 id="titulomensaje">Ningún mensaje encontrado</h2>
+            <h2 id="titulomensaje">Ningún mensaje fue encontrado</h2>
             <p id="parrafo">Escribe el texto que deseas encriptar o desencriptar</p>
             <textarea
             name="mensaje" 
@@ -39,7 +32,7 @@
         </textarea>
         </div>
     </div>
-    </div>
+</div>
     <footer>
         <img src="imagenes/Frame 1.png">
     </footer>
